# nb-clearoutput-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/notebook/: sample.ipynb
crates/json-event-parser/: Cargo.toml
crates/json-event-parser/src/: event.rs  lib.rs  read.rs  write.rs
src/: main.rs
