[package]
name = "fast-notebook-clear-output"
version = "0.1.0"
edition = "2021"
description = "A reasonably fast jupyter notebook clear output tool."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/json-event-parser"
]

[[bin]]
name = "nbclo"
path = "src/main.rs"

[dependencies]
clap = {version = "4.0.30", features = ["derive"]}
json-event-parser = { path = "./crates/json-event-parser" }
anyhow = "1.0.68"
