[package]
name = "json-event-parser-witespace"
version = "0.1.0"
edition = "2021"
description = "A json event parser with whitespace"
license = "MIT"
categories = ["JSON", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
smallvec = "1.10"

[dev-dependencies]
rstest = "0.16.0"